objects/vlocity_ins__ClaimLineItem__c.object
<CustomObject>
    <description>Represents the insurance claim line item level details. Master-detail child object of the Claim.</description>
    <fields>
        <fullName>vlocity_ins__AdjustedAmount__c</fullName>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Coverage</label>
        <referenceTo>vlocity_ins__AssetCoverage__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetCoverageName__c</fullName>
        <formula>IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__AssetCoverageId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__AssetCoverageId__r.Name, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Coverage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Party</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimAmount__c</fullName>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Coverage Id</label>
        <referenceTo>vlocity_ins__ClaimCoverage__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim Id</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimLineItemCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Line Item Code Id</label>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItemsCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimLineItemCode__c</fullName>
        <formula>vlocity_ins__ClaimLineItemCodeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Line Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantId__c</fullName>
        <formula>If (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c,
        If (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c,
        If (vlocity_ins__InvolvedItemId__c != null, vlocity_ins__InvolvedItemId__c,
        If (vlocity_ins__InvolvedPartyId__c != null, vlocity_ins__InvolvedPartyId__c, null ) ) ) )</formula>
        <label>Claimant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantName__c</fullName>
        <formula>IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__r.Name,
        IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__r.Name,
        If (vlocity_ins__InvolvedItemId__c != null, vlocity_ins__InvolvedItemId__r.Name,
        IF (vlocity_ins__InvolvedPartyId__c != null, vlocity_ins__InvolvedPartyId__r.Name, null) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageAmount__c</fullName>
        <label>Coverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DiagnosisCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diagnosis Code Id</label>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Claim Line Items (Diagnosis Code)</relationshipLabel>
        <relationshipName>ClaimLineItemsDiagnosisCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DiagnosisCode__c</fullName>
        <formula>vlocity_ins__DiagnosisCodeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diagnosis Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Date Of Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpenseAmount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuranceClaimPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Claim Related Party</label>
        <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
        <relationshipLabel>Claim Related Party</relationshipLabel>
        <relationshipName>ClaimLineItemRelatedPartyRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Item</label>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedProperty__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Party</label>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedInjury__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalReserveAmount__c</fullName>
        <label>Original Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentClaimLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Claim Line Item Id</label>
        <referenceTo>vlocity_ins__ClaimLineItem__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeeAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claim Line Items (Payee Account Id)</relationshipLabel>
        <relationshipName>PayeeClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeeContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claim Line Items (Payee Contact Id)</relationshipLabel>
        <relationshipName>PayeeClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeePartyId__c</fullName>
        <formula>IF (vlocity_ins__PayeeAccountId__c != null, CASESAFEID(vlocity_ins__PayeeAccountId__r.vlocity_ins__PartyId__c), CASESAFEID(vlocity_ins__PayeeContactId__r.vlocity_ins__PartyId__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Party Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeePartyName__c</fullName>
        <formula>IF (vlocity_ins__PayeeAccountId__c != null, vlocity_ins__PayeeAccountId__r.vlocity_ins__PartyId__r.Name, vlocity_ins__PayeeContactId__r.vlocity_ins__PartyId__r.Name )</formula>
        <label>Payee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeeTaxId__c</fullName>
        <formula>IF ( vlocity_ins__PayeeAccountId__c != null,  vlocity_ins__PayeeAccountId__r.vlocity_ins__TaxID__c,  vlocity_ins__PayeeContactId__r.vlocity_ins__TaxId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Tax Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PreauthorizationNumber__c</fullName>
        <externalId>true</externalId>
        <label>Preauthorization Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure Code Id</label>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Claim Line Items (Procedure Code)</relationshipLabel>
        <relationshipName>ClaimLineItemsProcedureCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureCode__c</fullName>
        <formula>vlocity_ins__ProcedureCodeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Contact Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderIdentifier__c</fullName>
        <formula>IF( vlocity_ins__ProviderAccountId__c !=null, vlocity_ins__ProviderAccountId__r.vlocity_ins__ProviderIdentifier__c,  vlocity_ins__ProviderContactId__r.vlocity_ins__ProviderIdentifier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderPartyId__c</fullName>
        <formula>IF(vlocity_ins__ProviderAccountId__c != NULL, CASESAFEID(vlocity_ins__ProviderAccountId__r.vlocity_ins__PartyId__c), CASESAFEID(vlocity_ins__ProviderContactId__r.vlocity_ins__PartyId__c) )</formula>
        <label>Provider Party Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReportedDate__c</fullName>
        <label>Reported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveAmount__c</fullName>
        <label>Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveStatus__c</fullName>
        <description>DEPRECATED</description>
        <label>Reserve Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveType__c</fullName>
        <label>Reserve Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ProviderLocation</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>ServiceLocationClaimLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Authority</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Authority Denied</fullName>
                </value>
                <value>
                    <fullName>Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Closed W/O Pay</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chargeable</fullName>
                </value>
                <value>
                    <fullName>Non Chargeable</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Line Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Line Items</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__ClaimLineItem</fullName>
        <active>true</active>
        <label>Claim Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__LineItemAdjustment</fullName>
        <active>true</active>
        <label>Line Item Adjustment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>